# 42_school_Piscine_Python_for_Datascience

./: README.md
ARRAY/ex00/: give_bmi.py  tester.py
ARRAY/ex01/: array2D.py  tester.py
ARRAY/ex02/: load_image.py  tester.py
ARRAY/ex03/: load_image.py  tester.py  zoom.py
ARRAY/ex04/: rotate.py
ARRAY/ex05/: load_image.py  pimp_image.py
DOD_Data_Oriented_Design/ex00/: ft_statistics.py  tester.py
DOD_Data_Oriented_Design/ex01/: in_out.py  tester.py
DOD_Data_Oriented_Design/ex02/: callLimit.py  tester.py
DOD_Data_Oriented_Design/ex03/: new_student.py
DataTable/ex00/: load_csv.py  tester.py
DataTable/ex01/: aff_life.py
DataTable/ex02/: aff_pop.py  load_csv.py
DataTable/ex03/: project_life.py
OOP_Programing/ex00/: S1E9.py
OOP_Programing/ex01/: tester.py
OOP_Programing/ex02/: DiamondTrap.py  S1E7.py  S1E9.py  tester.py
OOP_Programing/ex03/: ft_calculator.py  tester.py
OOP_Programing/ex04/: ft_calculator.py  tester.py
Starting/ex03/: tester.py
Starting/ex04/: whatis.py
Starting/ex06/: filterstring.py  ft_filter.py
Starting/ex07/: sos.py
Starting/ex08/: Loading.py
ex00/: Hello.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py
ex03/: NULL_not_found.py
ex04/: whatis.py
ex05/: building.py
ex06/: filterstring.py  ft_filter.py
ex08/: tester.py
ex09/: README.md  pyproject.toml  tester.py
ex09/ft_package/: count_in_list.py
